<resources>
    <string name="app_name">Body Mass Index Calculator</string>
    <string name="bmr_activity_name">Basal Metabolic Rate Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="heightLabel">Height</string>
    <string name="height">Enter Your height [cm]</string>
    <string name="weightLabel">Weight</string>
    <string name="weight">Enter Your weight [kg]</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="under">Underweight</string>
    <string name="normal">Healthy range</string>
    <string name="over">Overweight</string>
    <string name="obese">Obese</string>
    <string name="welcome_screen">Welcome in BMI Calculator App</string>
    <string name="launchBmr">BMR</string>
    <string name="age">Enter Your age</string>
    <string name="ageLabel">Age</string>
    <string name="calculateBMR">Calculate BMR</string>
    <string name="activityLevelLabel">Activity level</string>
    <string name="launchDiet">"Diet"</string>
    <string name="headerTextDiet">"What to eat during COVID-19?         You have been classified in the BMI category:" </string>
    <string name="detailTextDiet">"that's why your diet should be based on:" </string>
    <string name="back">Back</string>
    <string name="launchQuiz">Quiz</string>
    <string name="launchStat">Statistics</string>
    <string name="info">Check out our other items:</string>
</resources>
